#20 -게시판 페이지의 header, footer 업데이트
header, footer update

--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Footer template</title>
 </head>
+
 <body>
-<header>
-  header 삽입부
+<footer>
   <hr>
-</header>
+  footer 삽입부2
+</footer>
 </body>
 </html>
